# 526-project

./: README.md  analysis_draft.ipynb  analysis_draft_alt.ipynb  analysis_draft_synth.ipynb  analysis_draft_synth_MI.ipynb  pyproject.toml  report.html  report.ipynb  report_final.html  report_final.ipynb
data/: cspp_core_policy_2-6.csv  teacher_salaries.csv
