[project]
name = "526-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyfixest>=0.40.1",
    "scpi-pkg>=3.0.1",
    "statsmodels>=0.14.5",
]
